<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0."
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="129dp"
                android:layout_height="122dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="48sp"
                android:textStyle="bold" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/configProfile"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/Register"
                android:textColor="#000000"
                android:textSize="26sp"
                app:fontFamily="sans-serif-smallcaps" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />



            <EditText
                android:id="@+id/username"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/namefield"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/usernameTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/username"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/please_enter_a_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/re_pass"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/re_passheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/confirm_password"
                android:textColor="#000000" />



        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#9AA4DA"
            android:text="@string/create_acc"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#9AA4DA"
            android:text="@string/already_registered_signin"
            android:textColor="#FFFF" />

    </LinearLayout>


</RelativeLayout>