<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/userpic"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user"
            app:srcCompat="@drawable/doctor" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#5100BCD4"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/welcm"
            android:textColor="@color/purple_500"
            android:textColorHighlight="@color/purple_200"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/user_2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="#5100BCD4"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/h1"
            android:textColor="@color/purple_500"
            android:textColorHighlight="@color/purple_200"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="#5100BCD4"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/purple_500"
            android:textColorHighlight="@color/purple_200"
            android:textSize="35sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/back1"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>